--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-types/shared": "^3.23.0",
     "react": "^18.3.1",
     "react-aria": "^3.33.0",
-    "react-aria-components": "file:react-aria-components-v1.2.0-collection.tgz",
+    "react-aria-components": "file:react-aria-components-v1.2.0-collection-2.tgz",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
